--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,5 +4,5 @@
   RewriteRule ^index\.html$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
+  RewriteRule . /~proj2019-13/dist/index.html [L]
 </IfModule>
