--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "uikit": "^3.4.6",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-social-sharing": "^3.0.0-beta.10",
     "vue-tweet-embed": "^2.4.0",
     "webpack-cli": "^3.3.11"
   },
