--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^3.1.6",
     "vue-social-sharing": "^3.0.0-beta.10",
     "vue-tweet-embed": "^2.4.0",
+    "vue-unity-webgl": "^1.2.0",
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
