--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           npm install -g yarn
           yarn install
-          yarn build --mode=production
+          yarn build --mode=development
 
       - name: List output files
         run: ls -R dist
