--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
   "name": "otofudaweb",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "core-js": "^3.6.4",
     "css-loader": "^3.5.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "uikit": "^3.4.6",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-loader": "^17.4.2",
     "vue-router": "^3.1.6",
     "vue-social-sharing": "^3.0.0-beta.10",
     "vue-tweet-embed": "^2.4.0",
-    "vue-unity-webgl": "^1.2.0",
-    "webpack-cli": "^3.3.11"
+    "vue-unity-webgl": "^1.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
+    "@rsbuild/core": "^1.0.1-rc.4",
+    "@rsbuild/plugin-sass": "^1.0.1",
+    "@rsbuild/plugin-vue2": "^1.0.1",
     "@vue/cli-plugin-router": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
@@ -57,7 +56,6 @@
     "not dead"
   ],
   "volta": {
-    "node": "16.20.2",
-    "npm": "9.5.1"
+    "node": "20.17.0"
   }
 }
