--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "vue-unity-webgl": "^1.2.0"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.0.1-rc.4",
-    "@rsbuild/plugin-sass": "^1.0.1",
-    "@rsbuild/plugin-vue2": "^1.0.1",
+    "@rsbuild/core": "^1.2.15",
+    "@rsbuild/plugin-sass": "^1.2.2",
+    "@rsbuild/plugin-vue2": "^1.0.2",
     "@vue/cli-plugin-router": "^4.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
@@ -56,6 +56,7 @@
     "not dead"
   ],
   "volta": {
-    "node": "20.17.0"
+    "node": "22.14.0",
+    "npm": "10.9.2"
   }
 }
